--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,6 +1,17 @@
 html,
 body {
-  height: 100vh;
-  font-size: 14px;
-  margin: 0;
+  font-size: 16px;
+  font-family: 'Cabin', sans-serif;
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1200px) {
+  html {
+    font-size: 18px;
+  }
 }
